--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,11 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "ko"
-title                    : "개발자 람람이네"
+title                    : "부자가 되고싶은 람람이의 블로그"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "람람이"
-description              : "람람이네 집에 오신 걸 환영합니다"
+description              : "Spring back-end 개발자 람람이"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -102,8 +102,8 @@ analytics:
 
 # Site Author
 author:
-  name             : "람람이"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  name             : "ramram"
+  avatar           : "/assets/images/nari_2.jpeg"
   bio              : "잠자는 게 제일 좋은 개발자"
   location         : "서울"
   email            :
