[ramram] 포스팅 & 카테고리 추가 & 폰트추가
- 독서 카테고리 추가
- 토비 카테고리 추가
- OOP 독서 카테고리 추가
- 폰트 추가
- 프로필 이미지 사이즈 변경
- Web Appilcation Context 포스트 작성 (미완)

--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,11 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "ko"
-title                    : "부자가 되고싶은 람람이의 블로그"
+title                    : "나비랑 나리 주인님의 블로그"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "람람이"
-description              : "Spring back-end 개발자 람람이"
+description              : "Spring back-end 개발자 람람"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -103,7 +103,7 @@ analytics:
 # Site Author
 author:
   name             : "ramram"
-  avatar           : "/assets/images/nari_2.jpeg"
+  avatar           : "/assets/images/navi_1.jpeg"
   bio              : "잠자는 게 제일 좋은 개발자"
   location         : "서울"
   email            :
