[blog] feat 블로그 리뉴얼
- 테마 적용

--- a/_config.yml
+++ b/_config.yml
@@ -218,5 +218,6 @@ plugins:
   - jekyll-paginate
   - jekyll-spaceship
 
-remote_theme: gzgzg2/ramirami
+remote_theme: "jeffreytse/jekyll-theme-yat"
+
 
